# pymorphy-spacy-disambiguation

./: LICENSE  README.md  filter.sh  pyproject.toml
src/pymorphy_spacy_disambiguation/: disamb.py
tests/pymorphy_spacy_disambiguation/: test_disamb.py
