[tool.poetry]
name = "pymorphy-spacy-disambiguation"
version = "0.1.2"
description = "A package that picks the correct pymorphy2 morphology analysis based on morphology data from spacy."
authors = ["Hamotskyi, Serhii <serhii.hamotskyi@hs-anhalt.de>"]
readme = "README.md"
packages = [{include = "pymorphy_spacy_disambiguation", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.2"
pymorphy2 = "^0.9.1"
pymorphy2-dicts-uk = "^2.4.1.1.1460299261"
russian-tagsets = "^0.6"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ['now']
