[tool.poetry]
name = "pymorphy-spacy-disambiguation"
version = "0.1.4"
description = "A package that picks the correct pymorphy3 morphology analysis based on morphology data from spacy."
authors = ["Hamotskyi, Serhii <serhii@serhii.net>"]
readme = "README.md"
packages = [{include = "pymorphy_spacy_disambiguation", from = "src"}]

# [tool.poetry.dependencies]
# python = "^3.7"
# spacy = "^3.7.2"
# pymorphy2 = "^0.9.1"
# pymorphy2-dicts-uk = "^2.4.1.1.1460299261"
# russian-tagsets = "^0.6"
# pytest = "^7.4.3"
#
# [tool.poetry.group.dev.dependencies]
# pdbpp = "^0.10.3"
#

[tool.pdm.build]
includes = ["src/pymorphy_spacy_disambiguation"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
markers = ['now']

[tool.uv.sources]
uk-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/uk_core_news_sm-3.8.0/uk_core_news_sm-3.8.0-py3-none-any.whl" }

[project]
authors = [
    {name = "Hamotskyi, Serhii", email = "serhii.hamotskyi@hs-anhalt.de"},
]
requires-python = "<4.0,>=3.7"
dependencies = [
    "pip>=24.0",
    "pymorphy3>=2.0.2",
    "pymorphy3-dicts-uk>=2.4.1.1.1663094765",
    "pytest>=7.4.4",
    "russian-tagsets>=0.6",
    "spacy>=3.7.5",
    "uk-core-news-sm",
]
name = "pymorphy-spacy-disambiguation"
version = "0.1.3"
description = "A package that picks the correct pymorphy2 morphology analysis based on morphology data from spacy."
readme = "README.md"

[dependency-groups]
dev = [
    "pdbpp>=0.10.3",
]
